--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A single-page React app.",
   "main": "./source/index.js",
   "scripts": {
+    "start": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run clean && npm run mkdir && npm run build:html && npm run build:css && npm run build:js",
     "watch": "npm run watch:js",
@@ -25,6 +26,7 @@
   },
   "homepage": "https://github.com/helenphan0/tomatotime#readme",
   "dependencies": {
+    "history": "^4.3.0",
     "isomorphic-fetch": "^2.2.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
@@ -40,6 +42,7 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
-    "webpack": "^1.13.2"
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.1"
   }
 }
