--- a/package.json
+++ b/package.json
@@ -26,14 +26,12 @@
   },
   "homepage": "https://github.com/helenphan0/tomatotime#readme",
   "dependencies": {
-    "history": "^4.3.0",
     "isomorphic-fetch": "^2.2.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0"
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
