--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "./source/index.js",
   "scripts": {
     "start": "webpack-dev-server",
+    "build-css": "node-sass --include-path scss source/styles/style.scss source/styles/style.css",
+    "watch-css": "nodemon -e scss -x \"npm run build-css\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run clean && npm run mkdir && npm run build:html && npm run build:css && npm run build:js",
     "watch": "npm run watch:js",
@@ -30,8 +32,7 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
-    "react-router": "^2.8.1",
-    "redux": "^3.6.0"
+    "react-router": "^2.8.1"
   },
   "devDependencies": {
     "babel": "^6.5.2",
@@ -40,6 +41,7 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "node-sass": "^4.1.0",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.1"
   }
